--- a/client/src/index.css
+++ b/client/src/index.css
@@ -33,3 +33,19 @@ body {
     background-position: 0% 50%;
   }
 }
+
+@media print {
+  body * {
+    visibility: hidden;
+  }
+  #printable-area,
+  #printable-area * {
+    visibility: visible;
+  }
+  #printable-area {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+  }
+}
